Causeview Package Complete/ant script/retrieveUnpackaged/objects/Event_Team__c.object
<CustomObject>
    <description>Causeview - No longer required.</description>
    <fields>
        <fullName>Description_Note__c</fullName>
        <description>Description or note.</description>
        <label>Description/Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Special_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Role__c</fullName>
        <label>Event Role</label>
        <picklist>
            <picklistValues>
                <fullName>Event Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Event_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>(DEPRECATED)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{00000}</displayFormat>
        <label>Event Team No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(DEPRECATED)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>